--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6493,7 +6493,7 @@ button.list-group-item-danger.active:focus {
 
 .panel-default > .panel-heading {
   color: #333333;
-  background-color: #fff;
+  background-color: #ecf0f1;
   border-color: #25a25a;
 }
 
@@ -6502,7 +6502,7 @@ button.list-group-item-danger.active:focus {
 }
 
 .panel-default > .panel-heading .badge {
-  color: #fff;
+  color: #ecf0f1;
   background-color: #333333;
 }
 
