--- a/public/css/board.css
+++ b/public/css/board.css
@@ -5,10 +5,34 @@
   word-wrap: break-word;
 }
 
-.list-title p {
-  cursor: pointer;
+.list-title p, .list-title .textareaContainer {
   float: left;
   margin-right: 25px;
+}
+
+.list-title p {
+  cursor: pointer;
+}
+
+.list-title textarea {
+  margin: 0;
+  padding: 0px 0px 5px 0px;
+  overflow: hidden;
+  width: 100%;
+  height: 25px;
+  outline: none;
+  border: 0 none #FFF;
+  resize: none;
+  border-radius: 5px;
+}
+
+.list-title textarea:active {
+  outline: none;
+  border: 0 none #FFF;
+}
+
+.list-title .textareaContainer {
+  width: calc(100% - 25px);
 }
 
 .list-title .list-title-edit {
@@ -25,8 +49,43 @@
   background-color: #ccc;
 }
 
+.fade-transition {
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.fade-enter, .fade-leave {
+  opacity: 0;
+}
+
+.panel {
+  background-color: #ecf0f1;
+}
+
 .panel-body {
+  padding: 10px 10px 0px 10px;
+}
+
+.list-group > li > p {
+  width: 100% !important;
+  padding-right: 40px !important;
+}
+
+.list-group > li > .btn-group {
+  position: absolute !important;
+  right: 0px !important;
+  top: 0px !important;
+}
+
+.newTaskContainer {
   padding: 10px;
+}
+
+.newTaskContainer:hover {
+  cursor: pointer;
+  background-color: #bdc3c7;
+  text-decoration: underline;
+  color: #060707;
 }
 
 @media screen and (min-width: 768px) {
