--- a/public/css/board.css
+++ b/public/css/board.css
@@ -66,9 +66,47 @@
   padding: 10px 10px 0px 10px;
 }
 
-.list-group > li > p {
-  width: 100% !important;
-  padding-right: 40px !important;
+.task {
+  padding: 5px;
+  position: relative;
+  word-wrap: break-word;
+  list-style: none;
+  background-color: #FFFFFF;
+  margin-bottom: 5px;
+  text-align: left;
+  padding: 5px 0px 5px 7px;
+  border-radius: 3px 3px;
+  cursor: pointer;
+  box-shadow: 0px 1px 1px #888888;
+}
+
+.task .task-title {
+  width: 100%;
+  padding-right: 25px;
+  font-size: 11px;
+  font-weight: 500;
+  margin-right: 25px;
+}
+
+.task:hover .task-edit {
+  display: initial;
+}
+
+.task .task-edit {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  height: 25px;
+  width: 25px;
+  font-size: 10px;
+  padding: 8px;
+  border-radius: 2.5px;
+  display: none;
+  cursor: pointer;
+}
+
+.task .task-edit:hover {
+  background-color: #ccc;
 }
 
 .list-group > li > .btn-group {
