--- a/resources/assets/sass/board.scss
+++ b/resources/assets/sass/board.scss
@@ -72,10 +72,47 @@ $default-padding: 10px;
 	padding: $default-padding $default-padding 0px $default-padding;
 }
 
-      
-.list-group > li > p{
-    width: 100% !important;
-    padding-right: 40px !important;
+
+.task{
+	padding: 5px;
+	position: relative;
+   	word-wrap: break-word;
+
+	list-style:none; 
+	background-color:#FFFFFF; 
+	margin-bottom:5px;
+	text-align:left; 
+	padding: 5px 0px 5px 7px;
+	border-radius:3px 3px;
+	cursor:pointer;
+	box-shadow: 0px 1px 1px #888888;
+
+	& .task-title{
+	    width: 100%;
+	    padding-right: $list-edit-width;
+	    font-size: 11px;
+	    font-weight: 500;
+    	margin-right: $list-edit-width;
+	}
+	      
+	&:hover .task-edit{
+    	display: initial;
+	}
+	& .task-edit{
+		position:absolute;
+		right:$list-edit-width / 5;
+		top:$list-edit-width / 5;
+		height: $list-edit-width;
+		width: $list-edit-width;
+		font-size: 10px;
+		padding: $list-edit-width / 5 + 3;
+    	border-radius: $list-edit-width / 10;
+    	display: none;
+    	cursor: pointer;
+    	&:hover{
+    		background-color: #ccc
+    	}
+	}
 }
 
 .list-group > li > .btn-group{
