--- a/public/css/board.css
+++ b/public/css/board.css
@@ -109,21 +109,53 @@
   background-color: #ccc;
 }
 
+.task textarea {
+  margin: 0;
+  padding: 0px 0px 5px 0px;
+  overflow: hidden;
+  width: 100%;
+  height: 25px;
+  outline: none;
+  border: 0 none #FFF;
+  resize: none;
+  border-radius: 5px;
+}
+
+.task textarea:active {
+  outline: none;
+  border: 0 none #FFF;
+}
+
 .list-group > li > .btn-group {
   position: absolute !important;
   right: 0px !important;
   top: 0px !important;
 }
 
-.newTaskContainer {
+.newTaskContainer .newTask {
   padding: 10px;
 }
 
-.newTaskContainer:hover {
+.newTaskContainer .newTaskPlaceholder {
+  padding: 10px;
+}
+
+.newTaskContainer .newTaskPlaceholder:hover {
   cursor: pointer;
   background-color: #bdc3c7;
   text-decoration: underline;
   color: #060707;
+}
+
+.newTaskContainer .newTask_remove {
+  font-size: 20px;
+  vertical-align: middle;
+  color: #ababab;
+  cursor: pointer;
+}
+
+.newTaskContainer .newTask_remove:hover {
+  color: initial;
 }
 
 @media screen and (min-width: 768px) {
