--- a/public/css/board.css
+++ b/public/css/board.css
@@ -70,6 +70,10 @@
   padding: 5px;
   position: relative;
   word-wrap: break-word;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   list-style: none;
   background-color: #FFFFFF;
   margin-bottom: 5px;
@@ -185,6 +189,81 @@
 
 .container {
   width: 100%;
+}
+
+.task_modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 20px auto;
+  /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  /* Could be more or less, depending on screen size */
+  max-width: 730px;
+}
+
+.modal-content .modal_icon {
+  width: 25px;
+  margin: 0px;
+  float: left;
+  padding: 1px;
+  font-size: 16px;
+}
+
+.modal-content .modal_title .title {
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.modal-content .modal_title p {
+  margin: 0px 0px 0px 25px;
+}
+
+.modal-content .actions {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.modal-content .actions .btn {
+  text-align: left;
+}
+
+.modal-content .left .content {
+  margin: 0px 0px 0px 25px;
+}
+
+.modal-content .right {
+  font-weight: bold;
+}
+
+.modal-content .right a {
+  font-weight: initial;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover, .close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
