--- a/resources/assets/sass/board.scss
+++ b/resources/assets/sass/board.scss
@@ -77,7 +77,7 @@ $default-padding: 10px;
 	padding: 5px;
 	position: relative;
    	word-wrap: break-word;
-
+    user-select: none;
 	list-style:none; 
 	background-color:#FFFFFF; 
 	margin-bottom:5px;
@@ -190,6 +190,80 @@ $default-padding: 10px;
 
 .container{
 	width:100%;
+}
+
+
+.task_modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 20px auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    max-width: 730px;
+    & .modal_icon{
+        width: 25px;
+        margin: 0px;
+        float: left;
+        padding: 1px;
+        font-size: 16px;
+    }
+
+    & .modal_title .title{
+        font-weight: 700;
+        font-size: 16px;
+    }
+
+    & .modal_title p{
+        margin: 0px 0px 0px 25px;
+    }
+
+    & .actions{
+        width:100%;
+        margin-bottom: 15px;
+        & .btn{
+            text-align: left;
+
+        }
+    }
+
+    & .left .content{
+        margin: 0px 0px 0px 25px;
+    }
+
+    & .right{
+        font-weight: bold;
+        & a{
+            font-weight: initial;
+        }
+    }
+}
+
+
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    &:hover, &:focus{
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+        
+    }
 }
 
 @media screen and (min-width:768px){
