--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -39,6 +39,7 @@ $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
 $panel-default-heading-bg: #ecf0f1;
+$panel-border-radius: 4px;
 
 
 $navbar-default-color: $navbar-default-brand-color;
