--- a/resources/assets/sass/board.scss
+++ b/resources/assets/sass/board.scss
@@ -9,6 +9,7 @@
 
 $list-edit-width: 25px;
 $default-padding: 10px;
+$default-animation: 150ms;
 
 
 .list-title{
@@ -65,14 +66,30 @@ $default-padding: 10px;
     opacity : 0;
 }
 
-.panel{
-	background-color: $panel-default-heading-bg;
+.task-list{
+    margin-left: 16px;
+    max-width: 300px;
+    width: 100%;
+    vertical-align: top;
 }
 
-.panel-body{
-	padding: $default-padding $default-padding 0px $default-padding;
-}
+.newList{
+    cursor:pointer; 
+    max-width: 300px;
+    width: 100%;
+    & .task-list{
+        background-color: rgba(0,0,0,.12);
+        transition: $default-animation;
+        & .panel-body{
+            padding: $default-padding;
+            color: #DDD;
+        }
 
+        &:hover{
+            background-color: rgba(0,0,0,.3);
+        }
+    }
+}
 
 .task{
 	padding: 5px;
@@ -95,6 +112,11 @@ $default-padding: 10px;
 	    font-weight: 500;
     	margin-right: $list-edit-width;
         user-select: none;
+        white-space: initial;
+
+        & .task-tags{
+            display: block;
+        }
 	}
 	      
 	&:hover .task-edit{
@@ -139,15 +161,50 @@ $default-padding: 10px;
     top: 0px !important;
 }
 
-.newTaskContainer{
 
-	& .newTask{
-		padding: $default-padding;
+.panel{
+    /*max-height: calc(100vh - 182px);*/
+    background-color: $panel-default-heading-bg;
+    margin-bottom: 0px;
+
+    & .panel-body{
+        padding: $default-padding $default-padding 0px $default-padding;
+    }
+    & ul.list-group{
+        overflow-y: auto;
+        max-height: calc(100vh - 190px);
+        margin-bottom: 0px;
+
+        &::-webkit-scrollbar-track{
+            border-radius: 5px;
+            background-color: #DDD;
+        }
+
+        &::-webkit-scrollbar{
+            width: 7px;
+            border-radius: 5px;
+            background-color: #DDD;
+        }
+            
+        &::-webkit-scrollbar-thumb{
+            border-radius: 10px;
+            background-color: #AAA;
+        }
+    }
+}
+
+
+.newTaskContainer{
+    background-color: $panel-default-heading-bg;
+    border-radius: $panel-border-radius;
+    
+    & .newTask{
+        padding: $default-padding;
 	}
 
 	& .newTaskPlaceholder{
 		padding: $default-padding;
-
+        transition: $default-animation;
 		&:hover{
 			cursor: pointer;
 			background-color: #bdc3c7;
@@ -164,6 +221,41 @@ $default-padding: 10px;
     		color:initial;
     	}
 	}
+}
+
+#board{
+    position: relative;
+    flex-grow: 1;
+    white-space: nowrap;
+    & .row{
+        user-select: none;
+        white-space: nowrap;
+        overflow-x: auto;
+        overflow-y: hidden;
+
+        &::-webkit-scrollbar-track{
+            border-radius: 5px;
+            width: 110%;
+            margin-left: 7px;
+        }
+
+        &::-webkit-scrollbar{
+            width: 13px;
+            height: 13px;
+            border-radius: 5px;
+            background-color: #DDD;
+        }
+            
+        &::-webkit-scrollbar-thumb{
+            margin-left: 16px;  
+            border-radius: 10px;
+            background-color: #AAA;
+        }
+
+        & .task-list, & .newList{
+            display: inline-block;
+        }
+    }
 }
 
 .ghost-task{
@@ -236,6 +328,7 @@ $default-padding: 10px;
     & .actions{
         width:100%;
         margin-bottom: 15px;
+        display: initial;
         & .btn{
             text-align: left;
 
@@ -251,6 +344,11 @@ $default-padding: 10px;
         & a{
             font-weight: initial;
         }
+    }
+
+    & .row{
+        white-space: nowrap;
+        overflow-x: initial;
     }
 }
 
