--- a/resources/assets/sass/board.scss
+++ b/resources/assets/sass/board.scss
@@ -17,6 +17,7 @@ $default-animation: 150ms;
 	position: relative;
 	overflow: hidden;
     word-wrap: break-word;
+        white-space: initial;
     & p, .textareaContainer{
  		float: left;
     	margin-right: $list-edit-width;
@@ -172,7 +173,7 @@ $default-animation: 150ms;
     }
     & ul.list-group{
         overflow-y: auto;
-        max-height: calc(100vh - 190px);
+        max-height: calc(100vh - 195px);
         margin-bottom: 0px;
 
         &::-webkit-scrollbar-track{
@@ -307,6 +308,10 @@ $default-animation: 150ms;
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
     max-width: 730px;
+
+    & p{
+        white-space: initial;
+    }
     & .modal_icon{
         width: 25px;
         margin: 0px;
