--- a/public/css/board.css
+++ b/public/css/board.css
@@ -76,19 +76,25 @@
   width: 100%;
 }
 
-.newList .task-list {
-  background-color: rgba(0, 0, 0, 0.12);
+.newList .task-list, .newList .newTaskContainer {
+  background-color: rgba(0, 0, 0, 0.06);
   -webkit-transition: 150ms;
   transition: 150ms;
 }
 
-.newList .task-list .panel-body {
+.newList .task-list .panel-body, .newList .task-list .newTaskPlaceholder, .newList .newTaskContainer .panel-body, .newList .newTaskContainer .newTaskPlaceholder {
   padding: 10px;
   color: #DDD;
 }
 
-.newList .task-list:hover {
-  background-color: rgba(0, 0, 0, 0.3);
+.newList .task-list .panel-body:hover, .newList .task-list .newTaskPlaceholder:hover, .newList .newTaskContainer .panel-body:hover, .newList .newTaskContainer .newTaskPlaceholder:hover {
+  background-color: initial;
+  text-decoration: initial;
+  color: #DDD;
+}
+
+.newList .task-list:hover, .newList .newTaskContainer:hover {
+  background-color: rgba(0, 0, 0, 0.15);
 }
 
 .task {
