--- a/public/css/board.css
+++ b/public/css/board.css
@@ -118,7 +118,7 @@
 .task .task-title {
   width: 100%;
   padding-right: 25px;
-  font-size: 11px;
+  font-size: 12px;
   font-weight: 500;
   margin-right: 25px;
   -webkit-user-select: none;
@@ -246,6 +246,10 @@
   -webkit-box-flex: 1;
   flex-grow: 1;
   white-space: nowrap;
+}
+
+#board > .row {
+  height: calc(100vh - 91px);
 }
 
 #board .row {
